--- a/Housing.ipynb
+++ b/Housing.ipynb
@@ -554,6 +554,58 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from zlib import crc32\n",
+    "\n",
+    "def test_set_check(identifier, test_ratio):\n",
+    "    return crc32(np.int64(identifier)) & 0xffffffff < test_ratio * 2**32\n",
+    "\n",
+    "def split_train_test_by_id(data, test_ratio, id_column):\n",
+    "    ids = data[id_column]\n",
+    "    in_test_set = ids.apply(lambda id_: test_set_check(id_, test_ratio))\n",
+    "    return data.loc[~in_test_set], data.loc[in_test_set]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Compute a hash of each instance's identifier and put that instance in the test set if the hash is lower than or equal to 20% of the maximum hash value.\n",
+    "*lambda arguments : expression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "housing_with_id = housing.reset_index()   # adds an `index` column\n",
+    "train_set, test_set = split_train_test_by_id(housing_with_id, 0.2, \"index\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Since there is no unique identifier use row index on longitude and latitude"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "housing_with_id[\"id\"] = housing[\"longitude\"] * 1000 + housing[\"latitude\"]\n",
+    "train_set, test_set = split_train_test_by_id(housing_with_id, 0.2, \"id\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
